--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -35,6 +35,155 @@ main {
 
 
 
+/* ========== Auth ========== */
+
+.login{
+  margin: 100px 0;
+}
+
+.signup{
+  margin: 100px 0;
+}
+
+.auth-btn {
+  padding: 20px 30px;
+  border: 1px solid #333;
+  border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.auth-btn:hover {
+  background-color: #333;
+  color: white;
+}
+
+
+
+/* ========== Posts ========== */
+
+.post{
+  margin: 100px 0;
+}
+
+.post ul {
+  margin-top: 10px;
+  margin-left: 60px;
+  list-style-type: none;
+}
+
+.post-list {
+  color: black;
+  text-decoration: none;
+  line-height: 28px;
+  
+}
+
+.post-list-li {
+  border: 1px solid black;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 5px;          /* Rounded corners */
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.1); /* Subtle shadow */
+  background-color: #f9f9f9;   /* Light background */
+}
+
+.post-list-li:hover {
+  box-shadow: 3px 3px 8px rgba(0,0,0,0.2);
+    transform: translateY(-2px);
+    transition: all 0.3s ease;
+}
+
+.post-list:hover {
+  color:#79AEAC ;
+  text-decoration: none;
+}
+
+.create-post-btn{
+  padding: 20px 30px;
+  margin-left: 55px;
+  border: 1px solid #333;
+  border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.create-post-btn:hover {
+  background-color: #333;
+  color: white;
+}
+
+
+
+/* ========== Comment ========== */
+
+.hidden {
+  display: none;
+}
+
+.comment {
+    margin-top  : 10px;
+}
+
+.comment-btn {
+  padding: 20px 30px;
+  border: 1px solid #333;
+  border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.comment-btn:hover {
+  background-color: #333;
+  color: white;
+}
+
+.comment-box textarea {
+  width: 1100px;
+  height: 150px;
+  padding: 12px;
+  border: 2px solid #ddd;
+  border-radius: 4px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+.comment-box textarea:focus {
+  border-color: black;
+  outline: none;
+}
+
+.submit-comment {
+    padding: 5px 10px;
+    background-color: white;
+    color: rgb(192, 181, 181);
+    text-align: right;
+    border: none; 
+    border-radius: 12px;
+    font-family: "JetBrains Mono",monospace;
+    font-size: 16px;
+}
+
+.comment-ul {
+  list-style: none;
+}
+
+.comment-list-li {
+  border: 1px solid black;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 5px;          /* Rounded corners */
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.1); /* Subtle shadow */
+  background-color: #f9f9f9;   /* Light background */
+}
+
+
+
 /* ========== Nav bar ========== */
 
 .navbar {
@@ -65,8 +214,6 @@ main {
 .nav-btn:active {
   background-color: #2C2D2D;
 }
-
-
 
 .no-padding {
   padding-left: 0;
@@ -305,6 +452,7 @@ h1 {
 } */
 
 
+
 /* ========== Fonts ========== */
 .heading-a {
   font-family: "Lalezar", system-ui;
@@ -407,6 +555,7 @@ h1 {
 }
 
 
+
 /*========== Footer ========== */
 
 footer {
@@ -500,6 +649,7 @@ footer {
 }
 
 
+
 /* ========== Before ========== */
 
 .inline {
@@ -523,6 +673,56 @@ pre {
   font-size: inherit; /* Use the same font size as the surrounding text */
   white-space: pre-wrap; /* Preserve line breaks but allow wrapping */
   margin: 0; /* Remove default margins */
+}
+
+
+
+/* ========== 404 ========== */
+
+.error-body {
+  font-family: Arial, sans-serif;
+  /* background-color: #f0f0f0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: -30px 0 0 0;
+}
+
+.error-container {
+text-align: center;
+background-color: white;
+padding: 2rem;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.error-container h1 {
+font-size: 4rem;
+color: #333;
+margin-bottom: 0;
+}
+
+.error-container p {
+font-size: 1.2rem;
+color: #666;
+}
+
+.error-back-link {
+display: inline-block;
+margin-top: 1rem;
+padding: 0.5rem 1rem;
+background-color: rgb(255, 217, 142);
+color: rgb(54, 54, 54);
+text-decoration: none; 
+border-radius: 5px;
+transition: background-color 0.3s ease;
+}
+
+.error-back-link:hover {
+background-color: rgb(54, 54, 54);
+color: rgb(255, 217, 142);
+text-decoration: none;
 }
 
 
@@ -1151,8 +1351,61 @@ main {
 
 /* ========== Resources - Courses at BHS ========== */
 
+.self-learn-banner-img {
+  background-image: url('img/self-learn-banner.png'); 
+}
+
+.scroll-button {
+  padding: 20px 30px;
+  border: 1px solid #333;
+  border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.scroll-button:hover {
+  background-color: #333;
+  color: white;
+}
+
+.scroll-more {
+  margin: 150px 0;
+}
+
+.self-learn-card {
+  margin: 100px 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.self-learn-card img {
+  margin: 40px;
+  max-width: 200px;
+}
+
+.self-learn-card button {
+  padding: 18px 24px;
+  border: 1px solid #333;
+  border-radius: 40px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.self-learn-card button:hover {
+  background-color: #333;
+  color: white;
+}
+
+
+
+
+/* ========== Resources - Courses at BHS ========== */
+
 .courses-banner-img {
-  background-image: url('img/courses-banner.png'); /* Replace with your background image */
+  background-image: url('img/courses-banner.png');
 }
 
 .bhs-courses-heading {
@@ -1251,43 +1504,6 @@ main {
     color: #79aeac; 
 }
 
-
-
-/* ========== Comment ========== */
-
-.hidden {
-  display: none;
-}
-
-.comment {
-    margin-top  : 10px;
-}
-
-.comment-btn {
-    padding: 10px 20px;
-    background-color: #faf3f2;
-    color: grey;
-    border: none;
-    cursor: pointer;
-    border-radius: 15px;
-    border-bottom :rgba(45, 35, 66, 0.3); 
-    font-family: "JetBrains Mono",monospace;
-}
-
-.submit-comment {
-    padding: 5px 10px;
-    background-color: white;
-    color: rgb(192, 181, 181);
-    text-align: right;
-    border: none;
-    border-radius: 12px;
-    font-family: "JetBrains Mono",monospace;
-    font-size: 16px;
-}
-
-.comment-box {
-    margin-top: 10px;
-}
 
 
 
