--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %} {% block title %}Page not found{% endblock %}
 
 {% block content %}
+<div class="error-body">
+    <div class="error-container">
+        <h1>404</h1>
+        <p>Oops! The page you're looking for doesn't exist.</p>
+        <a href="/" class="error-back-link text-c-bold">Go Back Home</a>
+    </div>
+</div>
 
-<h1>404 Error</h1>
 
 {% endblock %}
