--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -2,49 +2,50 @@
 
 {% block content %}
 <form method="POST">
-    <br />
-    <h3 align="center">Sign Up</h3>
-    <div class="form-group">
-        <lable for="email">Email Address</lable>
-        <input 
-            type="email" 
-            class="form-control" 
-            id="email" 
-            name="email" 
-            placeholder="Enter email"
-        />
+    <div class="signup">
+        <h3 align="center">Sign Up</h3>
+        <div class="form-group">
+            <lable for="email">Email Address</lable>
+            <input 
+                type="email" 
+                class="form-control" 
+                id="email" 
+                name="email" 
+                placeholder="Enter email"
+            />
+        </div>
+        <div class="form-group">
+            <lable for="username">Username</lable>
+            <input 
+                type="username" 
+                class="form-control" 
+                id="username" 
+                name="username" 
+                placeholder="Enter username"
+            />
+        </div>
+        <div class="form-group">
+            <lable for="password1">Password</lable>
+            <input 
+                type="password" 
+                class="form-control" 
+                id="password1" 
+                name="password1" 
+                placeholder="Enter password"
+            />
+        </div>
+        <div class="form-group">
+            <lable for="password2">Confirm password</lable>
+            <input 
+                type="password" 
+                class="form-control" 
+                id="password2" 
+                name="password2" 
+                placeholder="Confirm password"
+            />
+        </div>
+        <br />
+        <button type="submit" class="button-a auth-btn">SUBMIT</button>
     </div>
-    <div class="form-group">
-        <lable for="username">Username</lable>
-        <input 
-            type="username" 
-            class="form-control" 
-            id="username" 
-            name="username" 
-            placeholder="Enter username"
-        />
-    </div>
-    <div class="form-group">
-        <lable for="password1">Password</lable>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password1" 
-            name="password1" 
-            placeholder="Enter password"
-        />
-    </div>
-    <div class="form-group">
-        <lable for="password2">Confirm password</lable>
-        <input 
-            type="password" 
-            class="form-control" 
-            id="password2" 
-            name="password2" 
-            placeholder="Confirm password"
-        />
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
