info center -> related topics

--- a/website/templates/career/software.html
+++ b/website/templates/career/software.html
@@ -140,18 +140,17 @@
     </div>
 </div>
 
-
 <div class="info-center">
     <a href="{{ url_for('views.resources', submenu='home') }}">
         <button class="resources-button text-d">Our Resources</button>
     </a>
-    <br><br>
-    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <h2 class="heading-e border-text">Related Topics</h2>
     <br>
     <div class="card-container">
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../../static/img/info-center-1.png" alt="Career opportunities">
+                <img class="card-image blur" src="../static/img/info-center-1.png" alt="Career opportunities">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
@@ -162,7 +161,7 @@
         </div>
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../../static/img/info-center-2.png" alt="Self-learn Resources">
+                <img class="card-image blur" src="../static/img/info-center-2.png" alt="Self-learn Resources">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
@@ -173,7 +172,7 @@
         </div>
         <div class="card">
             <div class="card-image-container">
-                <img class="card-image blur" src="../../static/img/info-center-3.png" alt="Courses at Burnside">
+                <img class="card-image blur" src="../static/img/info-center-3.png" alt="Courses at Burnside">
             </div>
             <div class="card-content">
                 <div class="card-category text-c">RESOURCES &gt;</div>
