--- a/website/templates/r-courses.html
+++ b/website/templates/r-courses.html
@@ -68,12 +68,13 @@
     </details>
 </div>
 
+
 <div class="info-center">
     <a href="{{ url_for('views.resources', submenu='home') }}">
         <button class="resources-button text-d">Our Resources</button>
     </a>
-    <br><br>
-    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <h2 class="heading-e border-text">Related Topics</h2>
     <br>
     <div class="card-container">
         <div class="card">
@@ -111,5 +112,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock %}
