--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -68,8 +68,8 @@
     <a href="{{ url_for('views.resources', submenu='home') }}">
         <button class="resources-button text-d">Our Resources</button>
     </a>
-    <br><br>
-    <h2 class="heading-e border-text">Information Centre</h2>
+    <br>
+    <h2 class="heading-e border-text">Related Topics</h2>
     <br>
     <div class="card-container">
         <div class="card">
